@@ -51,7 +51,7 @@ using System.Windows;
 // You can specify all the values or you can default the Build and Revision Numbers
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("2.2.21.90")]
-[assembly: AssemblyFileVersion("2.2.21.90")]
+[assembly: AssemblyVersion("2.2.34.99")]
+[assembly: AssemblyFileVersion("2.2.34.99")]
 [assembly: NeutralResourcesLanguage("en")]
 
