@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <AssemblyVersion>1.0.11.90</AssemblyVersion>
-    <FileVersion>1.0.11.90</FileVersion>
+    <AssemblyVersion>1.0.14.99</AssemblyVersion>
+    <FileVersion>1.0.14.99</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
